--- a/WF_Agenda/MasterPage.Master
+++ b/WF_Agenda/MasterPage.Master
@@ -21,7 +21,7 @@
                     <asp:MenuItem Text="Home" Value="Home" NavigateUrl="~/index.aspx"></asp:MenuItem>
                     <asp:MenuItem NavigateUrl="~/usuarios.aspx" Text="Usuários" Value="Usuario"></asp:MenuItem>
                     <asp:MenuItem Text="Contato" Value="Contato" NavigateUrl="~/contatos.aspx"></asp:MenuItem>
-                    <asp:MenuItem Text="Sair" Value="Sair"></asp:MenuItem>
+                    <asp:MenuItem Text="Sair" Value="Sair" NavigateUrl="~/Login.aspx"></asp:MenuItem>
                 </Items>
                 <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
                 <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
